# pyranking

./: LICENSE  Makefile  README.md  __init__.py  pyproject.toml  pyranking.py  test_pyranking.py
.github/workflows/: python-package.yml
