[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyranking"
version = "0.1.0"
authors = [
  { name="Quoc Vu", email="darthvu@gmail.com" },
]
description = "Strategies to assign ranks"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT", files = ["LICENSE"] }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "coverage",
]

[project.urls]
Homepage = "https://github.com/quocvu/pyranking"
Issues = "https://github.com/quocvu/pyranking/issues"

[tool.setuptools.packages.find]
include = ["pyranking.py"]
exclude = ["test_pyranking.py"]